# bobby

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.bench-firehose  Dockerfile.bobby-chef  Dockerfile.bobby-runner  Dockerfile.cloudflare-exporter  Dockerfile.cluster  Dockerfile.compact  Dockerfile.deps  Dockerfile.fly  Dockerfile.live-refine  Dockerfile.live-refine.dockerignore  Dockerfile.openai-exporter  Dockerfile.optimise  Dockerfile.pruner  Dockerfile.pruner.dockerignore  Dockerfile.service.tmpl  Dockerfile.skeet-appraise  Dockerfile.skeet-feed  Dockerfile.skeet-publish  Justfile  SPEC.md  TODO.md  architecture.md  bobby-appraisals-staging.env  bobby-appraisals.env  bobby-feed-staging.env  bobby-grafana-otel.env  bobby-grafana-tempo.env  bobby-local.env  bobby-staging.env  bobby.env  build.rs  cloudflare-exporter-prom-tmp.env  cloudflare-exporter.env  fly.appraise-staging.toml  fly.production.toml  fly.staging.toml  (+4 more)
bluesky/: Cargo.toml
bluesky/src/: dimensions.rs  existence.rs  image_url.rs  lib.rs  post_thread.rs
bluesky/src/existence/: image_prober.rs  skeet_prober.rs
cloudflare-exporter/: Cargo.toml
cloudflare-exporter/src/: cloudflare.rs  lib.rs  metrics.rs  otlp.rs  prom.rs  r2_rest.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs  tempo.rs  trace_analysis.rs
crates/observability/tests/fixtures/: tempo_search_response.json  tempo_trace_response.json
crates/openai-exporter/: Cargo.toml
crates/openai-exporter/src/: metrics.rs  openai.rs  prom.rs
crates/skeet-appraise/: Cargo.toml
crates/skeet-appraise/src/: admin.rs  auth.rs  auth_config.rs  available_feeds.rs  feed_snapshot.rs  handlers.rs  lib.rs  models_middleware.rs  project.rs  published_feed_middleware.rs  static_assets.rs  store_middleware.rs
crates/skeet-appraise/templates/: admin_page.html  home.html
crates/skeet-appraise/tests/: appraise_endpoints.rs  appraise_integration.rs  redis_session.rs
crates/skeet-appraise/tests/common/: mod.rs
crates/skeet-prune/: Cargo.toml
crates/skeet-prune/src/: classify.rs  firehose.rs  firehose_stage.rs  lib.rs  metrics.rs  persistence.rs  pipeline.rs  prune_image_stage.rs  prune_meta_stage.rs  save_stage.rs  status.rs
crates/skeet-prune/src/pipeline/: mod.rs  (+7 more)
crates/skeet-prune/tests/: blocklist.rs  examples.rs  filter_meta.rs
crates/skeet-publish/: Cargo.toml
crates/skeet-publish/src/: fallback.rs  image_url_resolver.rs  lib.rs  limit.rs  list_statistics.rs  metrics.rs  prediction.rs  published.rs  published_list.rs  published_list_catalog.rs  publisher.rs  redis_client.rs  source.rs  spec.rs  table_watch.rs  visibility.rs
crates/skeet-publish/tests/: publish_quality_roundtrip.rs  publisher_gating.rs  redis_published_list.rs
eval/: Cargo.toml  prices.toml
eval/src/: confusion.rs  lib.rs  metric_types.rs  metrics.rs  pricing.rs  results.rs  split.rs  update_prices.rs
face-detection/: Cargo.toml  build.rs
face-detection/src/: annotate.rs  lib.rs  postprocess.rs
face-detection/tests/: examples.rs
shared/: Cargo.toml  archetype.toml
shared/src/: appraiser.rs  band.rs  blocklist.rs  bluesky_cid.rs  image_id.rs  lib.rs  model_version.rs  refine_model.rs  rejection.rs  score.rs  skeet_id.rs  tracing.rs  zone.rs
shared/tests/: config_version.rs
skeet-feed/: Cargo.toml
skeet-feed/src/: admin.rs  appraiser_config.rs  auth.rs  auth_config.rs  dimension_cache.rs  effective_band.rs  feed_cache.rs  feed_config.rs  handlers.rs  lib.rs  main.rs  project.rs  started_at.rs  store_middleware.rs
skeet-feed/static/: htmx.min.js
skeet-feed/templates/: admin.html  admin_page.html  admin_row.html  base.html  best.html  feed.html  home.html
skeet-feed/tests/: feed_endpoints.rs  feed_integration.rs  feed_pages.rs  redis_session.rs
skeet-finder/: Cargo.toml  archetype.toml
skeet-finder/src/: classify.rs  classify_and_store.rs  content_filter.rs  filter_image_stage.rs  filter_meta_stage.rs  filter_stage.rs  firehose.rs  firehose_stage.rs  lib.rs  main.rs  metadata.rs  persistence.rs  pipeline.rs  save_stage.rs  status.rs
skeet-finder/tests/: blocklist.rs  examples.rs  filter_meta.rs
skeet-inspect/: Cargo.toml
skeet-inspect/src/: handlers.rs  lib.rs  project.rs
skeet-inspect/templates/: home.html  inspect.html
skeet-inspect/tests/: inspect_pages.rs
skeet-prune/: Cargo.toml  build.rs
skeet-prune/src/: classify.rs  content_filter.rs  firehose.rs  lib.rs  metrics.rs  persistence.rs  pipeline.rs  prune_image_stage.rs  prune_meta_stage.rs  save_stage.rs  status.rs
skeet-prune/tests/: blocklist.rs  examples.rs  filter_meta.rs
skeet-publish/: Cargo.toml
skeet-publish/src/: effective_band.rs  examined_count.rs  feed_cache.rs  image_url_resolver.rs  lib.rs  limit.rs  order.rs  published.rs  published_list.rs  published_pair.rs  publisher.rs  redis_client.rs  source.rs  table_watch.rs  visibility.rs
skeet-publish/tests/: publish_quality_roundtrip.rs  publisher_equivalence.rs  publisher_gating.rs  redis_published_list.rs
skeet-refine/: Cargo.toml
skeet-refine/src/: batch.rs  lib.rs  loader.rs  metrics.rs  model.rs  polling.rs  refining.rs  tick.rs
skeet-refine/src/train/: budget.rs  gate.rs  mod.rs  refinement.rs  scoring.rs  setup.rs
skeet-refine/tests/: model_version.rs  refine_models.rs
skeet-scorer/: Cargo.toml
skeet-scorer/src/: examples.rs  lib.rs  model.rs  scoring.rs
skeet-scorer/tests/: model_version.rs
skeet-store/: Cargo.toml
skeet-store/src/: appraisals.rs  args.rs  arrow_utils.rs  compact.rs  error.rs  health.rs  lancedb_utils.rs  lib.rs  open.rs  paging.rs  query_plan.rs  r2_metrics.rs  schema.rs  scores.rs  store_metrics.rs  store_tests.rs  stored.rs  summary.rs  tempo.rs  test_utils.rs  trace_analysis.rs  types.rs  version.rs  versioned_cache.rs
skeet-store/tests/fixtures/: tempo_search_response.json  tempo_trace_response.json
skeet-web-shared/: Cargo.toml
skeet-web-shared/src/: effective_band.rs  feed_entry.rs  layout.rs  lib.rs  static_assets.rs  store_middleware.rs  view_types.rs
skeet-web-shared/templates/: base.html  home.html  inspect.html
(+295 files in other folders)
