[workspace]
members = ["skeet-store", "skeet-finder", "skeet-feed", "face-detection", "shared", "skin-detection", "text-detection"]
resolver = "2"

[workspace.lints.clippy]
unwrap_used = "deny"

[workspace.dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1", features = ["derive"] }
shared = { path = "shared" }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

