[workspace]
members = ["skeet-store", "skeet-prune", "skeet-feed", "skeet-refine", "face-detection", "shared", "skin-detection"]
resolver = "2"

[workspace.lints.clippy]
unwrap_used = "deny"

[workspace.dependencies]
console-subscriber = "0.5" # must match tokio-console 0.1.14 (both use console-api 0.9)
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1", features = ["derive"] }
shared = { path = "shared" }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = "0.31"
tracing = "0.1"
tracing-appender = "0.2"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tempfile = "3"
proptest = "1"
cot = "0.5"
oauth2 = "5"
tower = "0.5"
tower-sessions = "0.14"

