[workspace]
members = ["build-support", "skeet-store", "skeet-prune", "skeet-feed", "skeet-refine", "face-detection", "shared", "skin-detection", "text-detection", "cloudflare-exporter", "test-support"]
resolver = "2"

[workspace.lints.clippy]
unwrap_used = "deny"

[workspace.dependencies]
build-support = { path = "build-support" }
test-support = { path = "test-support" }
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1", features = ["derive"] }
shared = { path = "shared" }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = "0.31"
tracing = "0.1"
tracing-appender = "0.2"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
regex = "1"
reqwest = { version = "0.13", features = ["json", "rustls", "query"], default-features = false }
tempfile = "3"
proptest = "1"
cot = { version = "0.6", default-features = false, features = ["redis"] }
# HACK: cot 0.6 doesn't expose TLS features for its redis dependency.
# Adding deadpool-redis directly with tokio-rustls-comp makes Cargo unify
# features on the single deadpool-redis 0.23.x copy, enabling TLS for cot's
# RedisStore. This is fragile — if cot changes its deadpool-redis version the
# unification may silently stop. Remove once cot exposes a redis-tls feature.
deadpool-redis = { version = "0.23", features = ["tokio-rustls-comp", "tls-rustls-insecure"] }
rcgen = "0.14"
rustls = { version = "0.23", features = ["ring"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["redis"] }
oauth2 = "5"
tower = "0.5"
tower-sessions = "0.14"

