[package]
name = "bluesky"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
image = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
