[package]
name = "eval"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
shared = { workspace = true }
smartcore = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
