[package]
name = "face-detection"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
burn = { version = "~0.20", default-features = false, features = ["ndarray"] }
burn-store = { version = "~0.20", features = ["burnpack"] }
image = { workspace = true }
imageproc = "0.25"
serde = { workspace = true }
shared = { workspace = true }
toml = { workspace = true }

# Pin transitive deps to avoid burn-import build failures
lzma-rust2 = "~0.15.7"
candle-core = "=0.9.1"

[dev-dependencies]
libtest-mimic = "0.8"
serde = { workspace = true }
toml = { workspace = true }

[[bin]]
name = "classify-examples"
path = "src/bin/classify_examples.rs"

[[test]]
name = "examples"
harness = false

[build-dependencies]
burn-import = "~0.20"
