[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
