[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
console-subscriber = { workspace = true }
chrono = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
