[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
hex = { workspace = true }
image = { workspace = true }
md5 = { workspace = true }
serde = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }

[features]
test-helpers = []

[lints]
workspace = true
