[package]
name = "skeet-feed"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
cot = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { workspace = true }
skeet-publish = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
rustls = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
build-support = { workspace = true }

[dev-dependencies]
skeet-store = { path = "../skeet-store", features = ["test-helpers"] }
test-support = { workspace = true }
tempfile = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[features]
test = ["cot/test"]
integ = ["test"]

[[bin]]
name = "skeet-feed"
path = "src/bin/skeet_feed.rs"

[[bin]]
name = "register-feed"
path = "src/bin/register_feed.rs"
