[package]
name = "skeet-finder"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
atrium-api = { version = "0.25", default-features = false, features = ["namespace-appbsky"] }
chrono = { workspace = true }
clap = { workspace = true }
face-detection = { path = "../face-detection" }
image = { workspace = true }
indicatif = "0.17"
jetstream-oxide = "0.1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
skin-detection = { path = "../skin-detection" }
skeet-store = { path = "../skeet-store" }
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
