[package]
name = "skeet-finder"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
atrium-api = { version = "0.25", default-features = false, features = ["namespace-appbsky"] }
chrono = { workspace = true }
clap = { workspace = true }
face-detection = { path = "../face-detection" }
image = { workspace = true }
indicatif = "0.17"
jetstream-oxide = "0.1"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
serde_json = "1"
shared = { workspace = true }
skin-detection = { path = "../skin-detection" }
skeet-store = { path = "../skeet-store" }
text-detection = { path = "../text-detection" }
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
libtest-mimic = "0.8"
serde = { workspace = true }
toml = { workspace = true }

[[bin]]
name = "finder"
path = "src/bin/finder.rs"

[[bin]]
name = "classify-examples"
path = "src/bin/classify_examples.rs"

[[bin]]
name = "image-metadata-dump"
path = "src/bin/image_metadata_dump.rs"

[[bin]]
name = "at-metadata-dump"
path = "src/bin/at_metadata_dump.rs"

[[bin]]
name = "add-to-blocklist"
path = "src/bin/add_to_blocklist.rs"

[[test]]
name = "examples"
harness = false

[[test]]
name = "blocklist"
harness = false
