[package]
name = "skeet-inspect"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
cot = { workspace = true }
image = { workspace = true }
shared = { workspace = true }
skeet-store = { path = "../skeet-store" }
skeet-web-shared = { path = "../skeet-web-shared" }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
image = { workspace = true }
skeet-store = { path = "../skeet-store", features = ["test-helpers"] }
tempfile = { workspace = true }
tokio = { workspace = true }

[features]
test = ["cot/test"]

[[bin]]
name = "skeet-inspect"
path = "src/bin/skeet_inspect.rs"
