[package]
name = "skeet-publish"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
shared = { workspace = true }
skeet-store = { path = "../skeet-store" }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
skeet-store = { path = "../skeet-store", features = ["test-helpers"] }
test-support = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
