[package]
name = "skeet-scorer"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
base64 = "0.22"
clap = { workspace = true }
image = { workspace = true }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
rig-core = "0.33"
serde = { workspace = true }
serde_json = "1"
shared = { workspace = true }
skeet-store = { path = "../skeet-store" }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "rescore"
path = "src/bin/rescore.rs"

[[bin]]
name = "live-score"
path = "src/bin/live_score.rs"
