[package]
name = "skeet-store"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow-array = "57.2"
arrow-schema = "57.2"
chrono = { workspace = true }
clap = { workspace = true }
futures = "0.3"
image = { workspace = true }
lancedb = { version = "0.26", features = ["aws"] }
rand = "0.9"
shared = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = "0.4"
md5 = "0.7"
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
