[package]
name = "skeet-store"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow-arith = "57"
arrow-array = "57.2"
arrow-schema = "57.2"
chrono = { workspace = true }
clap = { workspace = true }
futures = "0.3"
image = { workspace = true }
lancedb = { version = "0.26", features = ["aws"] }
rand = "0.9"
shared = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
hex = "0.4"
md5 = "0.7"
uuid = { version = "1", features = ["v4"] }
aws-sdk-s3 = "1.127.0"
aws-config = "1.8.15"
aws-credential-types = "1.2.14"

[lints]
workspace = true

[features]
test-helpers = ["dep:tempfile"]

[dependencies.tempfile]
workspace = true
optional = true

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
