[package]
name = "observability"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
shared = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
build-support = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
