[package]
name = "skeet-prune"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
atrium-api = { version = "0.25", default-features = false, features = ["namespace-appbsky"] }
bluesky = { workspace = true }
eval = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
csv = "1"
face-detection = { path = "../face-detection" }
fastrand = "2"
image = { workspace = true }
jetstream-oxide = "0.1"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
opentelemetry = { workspace = true }
shared = { workspace = true }
skin-detection = { path = "../skin-detection" }
text-detection = { path = "../text-detection" }
skeet-store = { path = "../skeet-store" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
build-support = { workspace = true }

[dev-dependencies]
libtest-mimic = "0.8"
opentelemetry_sdk = { workspace = true, features = ["testing"] }
proptest = { workspace = true }
test-support = { workspace = true }
toml = { workspace = true }

[[bin]]
name = "pruner"
path = "src/bin/pruner.rs"

[[bin]]
name = "classify-examples"
path = "src/bin/classify_examples.rs"

[[bin]]
name = "image-metadata-dump"
path = "src/bin/image_metadata_dump.rs"

[[bin]]
name = "at-metadata-dump"
path = "src/bin/at_metadata_dump.rs"

[[bin]]
name = "add-to-blocklist"
path = "src/bin/add_to_blocklist.rs"

[[bin]]
name = "eval"
path = "src/bin/eval.rs"


[[test]]
name = "examples"
harness = false

[[test]]
name = "blocklist"
harness = false

[[test]]
name = "filter_meta"
harness = false
